@@ -13,7 +13,7 @@ import com.ark.inflearnback.configuration.security.repository.RoleRepository;
 import com.ark.inflearnback.configuration.security.service.SecurityResourceService;
 import com.ark.inflearnback.configuration.security.service.UsernamePasswordService;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -42,7 +42,6 @@ import org.springframework.security.web.access.intercept.FilterSecurityIntercept
 import org.springframework.security.web.authentication.AuthenticationFailureHandler;
 import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.session.HttpSessionEventPublisher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -72,6 +71,7 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
         web.ignoring()
             .requestMatchers(PathRequest.toStaticResources().atCommonLocations())
             .antMatchers("/h2-console/**")
+            .antMatchers("/docs/**")
             .antMatchers("/favicon.ico");
     }
 
@@ -79,7 +79,9 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
     protected void configure(final HttpSecurity http) throws Exception {
         http
             .cors().and()
+
             .csrf().disable()
+
             .httpBasic().disable()
 
             .authorizeRequests(
@@ -88,7 +90,7 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
                     .expressionHandler(expressionHandler())
             )
 
-            .formLogin().and() // 09-25 한창훈: 커스텀 로그인 페이지 미연동으로 기본 폼로그인 페이지 임시 사용 조치
+            .formLogin().disable()
 
             .oauth2Login(login ->
                 login.loginProcessingUrl("/api/v1/login/oauth2/*")
@@ -103,18 +105,14 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
             )
 
             .addFilterAt(usernamePasswordLoginProcessingFilter(), UsernamePasswordAuthenticationFilter.class)
-            .addFilterBefore(customFilterSecurityInterceptor(), FilterSecurityInterceptor.class)
-
-            .sessionManagement()
-            .maximumSessions(1)
-            .expiredUrl("/");
+            .addFilterBefore(customFilterSecurityInterceptor(), FilterSecurityInterceptor.class);
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        configuration.setAllowedOriginPatterns(Collections.singletonList("*"));
+        configuration.setAllowedOrigins(List.of("*"));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("authorization", "content-type", "x-auth-token"));
         configuration.setExposedHeaders(List.of("x-auth-token"));
@@ -127,7 +125,8 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
 
     @Bean
     public SecurityExpressionHandler<FilterInvocation> expressionHandler() {
-        final DefaultWebSecurityExpressionHandler webSecurityExpressionHandler = new DefaultWebSecurityExpressionHandler();
+        final DefaultWebSecurityExpressionHandler webSecurityExpressionHandler =
+            new DefaultWebSecurityExpressionHandler();
         webSecurityExpressionHandler.setRoleHierarchy(roleHierarchy());
         return webSecurityExpressionHandler;
     }
@@ -151,7 +150,9 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
     }
 
     private List<AccessDecisionVoter<?>> getAccessDecisionVoters() {
-        return List.of(roleVoter());
+        final List<AccessDecisionVoter<?>> accessDecisionVoters = new ArrayList<>();
+        accessDecisionVoters.add(roleVoter());
+        return accessDecisionVoters;
     }
 
     @Bean
@@ -207,11 +208,6 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
     @Bean
     public Oauth2AuthenticationSuccessHandler oauth2AuthenticationSuccessHandler() {
         return new Oauth2AuthenticationSuccessHandler(objectMapper, memberRepository, roleRepository);
-    }
-
-    @Bean
-    public HttpSessionEventPublisher httpSessionEventPublisher() {
-        return new HttpSessionEventPublisher();
     }
 
 }
